Se corrigen todos los errores detectados por sonarqube